--- a/kustomize/overlays/dev/Replicas.yaml
+++ b/kustomize/overlays/dev/Replicas.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   replicas: 2
   template:
+    metadata:
+      annotations:
+        force-update: "true"
     spec:
       containers:
       - name: curl-target
