--- a/kustomize/overlays/prod/Replicas.yaml
+++ b/kustomize/overlays/prod/Replicas.yaml
@@ -9,7 +9,7 @@ spec:
       containers:
       - name: curl-target
         image: devkimbob/html_conn:1.2.0
-  strategy: RollingUpdate
+  strategy: 
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 2
